# HelloWorld-C

./: .gitignore  CMakeLists.txt  README.md
cmake/: clang_tools.cmake
include/: celsius.h  fahrenheit.h  inputoutput.h  main.h  temperature.h
src/: Makefile  celsius.c  fahrenheit.c  inputoutput.c  main.c  temperature.c
